--- a/header.css
+++ b/header.css
@@ -4,3 +4,7 @@
     background-image: url("../img/menu.svg");
     display: inline-block;
 }
+
+.cabeçalho{
+    background-color: var(--branco);
+}
