--- a/header.css
+++ b/header.css
@@ -11,3 +11,12 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.container{
+    display:flex
+    aling-items:center;
+}
+
+.container__imagem{
+    padding: 1em;
+}
