--- a/header.css
+++ b/header.css
@@ -2,6 +2,8 @@
     width: 24px;
     height: 24px;
     background-image: url("../img/menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
 
