--- a/header.css
+++ b/header.css
@@ -46,6 +46,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    text-transform: uppercase;
 }
 
 
